fix: datatable search bar light background in dark mode

--- a/src/assets/scss/themes/dark/_mazer-dark.scss
+++ b/src/assets/scss/themes/dark/_mazer-dark.scss
@@ -35,6 +35,20 @@
     }
 }
 
+// DataTable
+.dataTable-input {
+    background-color: $input-bg;
+    border-color: $input-border-color;
+    transition: all .2s ease-in-out;
+    
+    &:focus {
+        background-color: $input-focus-bg;
+        border-color: $input-focus-border-color;
+        color: $input-focus-color;
+    }
+    
+}
+
 // override selector
 // see original on mixins\_forms.scss
 @mixin form-validation-state-selector($state) {
