--- a/src/assets/scss/themes/dark/_variables-dark.scss
+++ b/src/assets/scss/themes/dark/_variables-dark.scss
@@ -112,7 +112,7 @@ $input-color:                           $body-color;
 $input-border-color:                    #35354f;
 
 $input-focus-bg:                        $input-bg ;
-$input-focus-border-color:              #171723;
+$input-focus-border-color:              #4b4b68;
 $input-focus-color:                     $input-color;
 
 $input-group-addon-color:               #526e8a ;
